== 0.0.9 / 2009-12-26 
  * splat for gentest, gentest-test files in their own folder
  * splat
  * in Hipe::Cli::Cli#run() wrap String response in a thing that responds to valid? if necessary.
  * added make_it_not_an_It so that method_missing doesn't look for predicates in the implementing method
  * gets_opened() predicate now returns a plain old filehandle, not an OpenStruct
  * Exceptions now support the idea of a "graceful list" -- land gracefully for these exceptions
  * ridiculous ridiculous goto logic
  * app-level options (replacing OptionLikeCommands)
  * gentest generates bacon tests from command line input!
  * generate banner for individual commands
  * plugins can now be requested by name with no subcommand (for default commands, etc)
  * bugfix for showing -h too many times with plugins
== 0.0.8 / 2009-12-19
  * predicates with 98.44% coverage
  * removed output buffering class registration
== 0.0.7 / 2009-12-15 
  * predicates
  * output buffering class registration
== 0.0.6 
  * defaults
  * more helpful error messages from optparse    
== 0.0.5 / 2009-12-14
  * plugins  
== 0.0.4 / 2009-12-14
  * bugfix release for hipe-core
  * need to figure out how to handle exceptions on syntax errors (sort of)
  * using optparse to display help screen for the application 
  * 98% test coverage
  * little guy in bin for making aliases to examples
  * using optparse for required and optional arguments, (not just options) too. !
== 0.0.3 
  * beginning of complete overhaul.  100% coverage! ;)
== 0.0.2
  * confusion
== 0.0.1 / 2009-12-12
  * existing code cleaned up for 0.0.2 changes
  * passes all tests, 89% coverage
== 0.0.0 / 2009-11-19
* 1 major enhancement
  * existence (apologies to webrat)
== THE DISTANT FUTURE, THE YEAR 2000
  * generate descriptions for command elements from dsl
  * address @todo's in the code
  * maybe or maybe not get rid of optiony-looking commands