@@ -1,4 +1,5 @@
 == 0.0.9 / 2009-12-26 
+  * gentest "directives"
   * splat for gentest, gentest-test files in their own folder
   * splat
   * in Hipe::Cli::Cli#run() wrap String response in a thing that responds to valid? if necessary.
